[package]
name = "torrant"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
base16 = "0.2.1"
bendy = { version = "0.4.0-beta.2", features = ["serde"] }
byteorder = "1.4.3"
bytes = "1.4.0"
futures = "0.3.28"
rand = "0.8.5"
reqwest = "0.11.18"
serde = { version = "1.0.183", features = ["derive"] }
serde_bytes = "0.11.12"
serde_urlencoded = "0.7.1"
sha1 = "0.10.5"
tokio = { version = "1.31.0", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
url = "2.4.0"
